--- a/langs/es-ES.json
+++ b/langs/es-ES.json
@@ -1,68 +1,68 @@
 {
-  "NX/COLOUR/B": "",
-  "NX/COLOUR/B/PRE": "",
-  "NX/COLOUR/DROPDOWN/INPUT": "",
-  "NX/COLOUR/DROPDOWN/INPUT/PRE": "",
-  "NX/COLOUR/G": "",
-  "NX/COLOUR/G/PRE": "",
-  "NX/COLOUR/INPUT": "",
+  "NX/COLOUR/B": "Azul:",
+  "NX/COLOUR/B/PRE": "A:",
+  "NX/COLOUR/DROPDOWN/INPUT": "Color Hex:",
+  "NX/COLOUR/DROPDOWN/INPUT/PRE": "Hex:",
+  "NX/COLOUR/G": "Verde:",
+  "NX/COLOUR/G/PRE": "V:",
+  "NX/COLOUR/INPUT": "Color Hex:",
   "NX/COLOUR/INPUT/PRE": "",
   "NX/COLOUR/R": "",
   "NX/COLOUR/R/PRE": "",
   "NX/COLOUR/RESET": "",
   "HOME": "Mega Hack",
-  "HOME/LANGUAGE": "",
-  "HOME/SEARCH": "",
+  "HOME/LANGUAGE": "Idioma:",
+  "HOME/SEARCH": "Buscar",
   "BYPASS": "",
   "BYPASS/HACK_MAIN_LEVELS": "",
-  "BYPASS/HACK_MAIN_LEVELS/TIP": "",
+  "BYPASS/HACK_MAIN_LEVELS/TIP": "Desbloquea todos los Demons principales",
   "BYPASS/HACK_MUSIC_UNLOCKER": "",
   "BYPASS/HACK_MUSIC_UNLOCKER/TIP": "",
   "BYPASS/HACK_SLIDER_LIMIT": "",
-  "BYPASS/HACK_SLIDER_LIMIT/TIP": "",
+  "BYPASS/HACK_SLIDER_LIMIT/TIP": "Permite arrastrar los deslizadores más allá del límite visible",
   "BYPASS/HACK_TEXT_LENGTH": "",
   "BYPASS/HACK_TEXT_LENGTH/TIP": "",
   "BYPASS/HACK_TREASURE_ROOM": "",
   "BYPASS/HACK_TREASURE_ROOM/TIP": "",
   "BYPASS/HACK_UNLOCK_ICONS": "",
-  "BYPASS/HACK_UNLOCK_ICONS/TIP": "",
+  "BYPASS/HACK_UNLOCK_ICONS/TIP": "Desbloquea todos los iconos",
   "BYPASS/HACK_UNLOCK_SHOPS": "",
   "BYPASS/HACK_UNLOCK_SHOPS/TIP": "",
   "BYPASS/HACK_UNLOCK_VAULTS": "",
-  "BYPASS/HACK_UNLOCK_VAULTS/TIP": "",
+  "BYPASS/HACK_UNLOCK_VAULTS/TIP": "Desbloquea todos los Vaults",
   "COSMETIC": "",
   "COSMETIC/HACK_CLASSIC_PARTICLES": "",
-  "COSMETIC/HACK_CLASSIC_PARTICLES/TIP": "",
+  "COSMETIC/HACK_CLASSIC_PARTICLES/TIP": "Trae de vuelta las minipartículas que seguian al jugador",
   "COSMETIC/HACK_HIDE_PAUSE_BUTTON": "",
   "COSMETIC/HACK_HIDE_PAUSE_BUTTON/TIP": "",
   "COSMETIC/HACK_HIDE_PAUSE_MENU": "",
-  "COSMETIC/HACK_HIDE_PAUSE_MENU/TIP": "",
+  "COSMETIC/HACK_HIDE_PAUSE_MENU/TIP": "Oculta el menú de pausa, útil para hacer capturas de pantalla de los niveles.",
   "COSMETIC/HACK_HIDE_PLAYER": "",
-  "COSMETIC/HACK_HIDE_PLAYER/TIP": "",
+  "COSMETIC/HACK_HIDE_PLAYER/TIP": "Oculta al jugador",
   "COSMETIC/HACK_NO_CAMERA": "",
   "COSMETIC/HACK_NO_CAMERA/TIP": "",
   "COSMETIC/HACK_NO_CAMERA_ZOOM": "",
   "COSMETIC/HACK_NO_CAMERA_ZOOM/TIP": "",
   "COSMETIC/HACK_NO_DEATH_EFFECT": "",
-  "COSMETIC/HACK_NO_DEATH_EFFECT/TIP": "",
+  "COSMETIC/HACK_NO_DEATH_EFFECT/TIP": "Desactiva los efectos visuales al morir",
   "COSMETIC/HACK_NO_DO_NOT_FLIP": "",
   "COSMETIC/HACK_NO_DO_NOT_FLIP/TIP": "",
   "COSMETIC/HACK_NO_PARTICLES": "",
-  "COSMETIC/HACK_NO_PARTICLES/TIP": "",
+  "COSMETIC/HACK_NO_PARTICLES/TIP": "Desactiva el sistema de particulas (mayormente)",
   "COSMETIC/HACK_NO_PORTAL_LIGHTNING": "",
-  "COSMETIC/HACK_NO_PORTAL_LIGHTNING/TIP": "",
+  "COSMETIC/HACK_NO_PORTAL_LIGHTNING/TIP": "Desactiva los rayos de los portales que cambian de tamaño",
   "COSMETIC/HACK_NO_PULSE": "",
-  "COSMETIC/HACK_NO_PULSE/TIP": "",
+  "COSMETIC/HACK_NO_PULSE/TIP": "Desactiva el pulso de los objetos",
   "COSMETIC/HACK_NO_RESPAWN_FLASH": "",
-  "COSMETIC/HACK_NO_RESPAWN_FLASH/TIP": "",
+  "COSMETIC/HACK_NO_RESPAWN_FLASH/TIP": "Desactiva el parpadeo y los circulos que aparecen al morir",
   "COSMETIC/HACK_NO_SHADERS": "",
-  "COSMETIC/HACK_NO_SHADERS/TIP": "",
+  "COSMETIC/HACK_NO_SHADERS/TIP": "Desactiva los shaders del nivel",
   "COSMETIC/HACK_NO_SHAKE": "",
-  "COSMETIC/HACK_NO_SHAKE/TIP": "",
+  "COSMETIC/HACK_NO_SHAKE/TIP": "Desactiva los Shake Triggers",
   "COSMETIC/HACK_NO_TRAIL": "",
   "COSMETIC/HACK_NO_TRAIL/TIP": "",
   "COSMETIC/HACK_NO_WAVE_PULSE": "",
-  "COSMETIC/HACK_NO_WAVE_PULSE/TIP": "",
+  "COSMETIC/HACK_NO_WAVE_PULSE/TIP": "Desactiva el pulso del wave",
   "COSMETIC/HACK_NO_WAVE_TRAIL": "",
   "COSMETIC/HACK_NO_WAVE_TRAIL/TIP": "",
   "COSMETIC/HACK_NO_WAVE_TRAIL_BEHIND": "",
@@ -76,32 +76,32 @@
   "COSMETIC/HACK_WAVE_TRAIL_FIX": "",
   "COSMETIC/HACK_WAVE_TRAIL_FIX/TIP": "",
   "COSMETIC/HACK_WAVE_TRAIL_ON_DEATH": "",
-  "COSMETIC/HACK_WAVE_TRAIL_ON_DEATH/TIP": "",
+  "COSMETIC/HACK_WAVE_TRAIL_ON_DEATH/TIP": "Mantiene el Wave Trail al morir",
   "COSMETIC/WAVE_PULSE_SIZE/DROPDOWN/SIZE": "",
   "COSMETIC/WAVE_PULSE_SIZE/DROPDOWN/SIZE/SUF": "",
   "COSMETIC/WAVE_PULSE_SIZE/HACK_WAVE_PULSE_SIZE": "",
   "COSMETIC/WAVE_PULSE_SIZE/HACK_WAVE_PULSE_SIZE/TIP": "",
   "CREATOR": "",
   "CREATOR/HACK_ACCURATE_SAVE": "",
-  "CREATOR/HACK_ACCURATE_SAVE/TIP": "",
+  "CREATOR/HACK_ACCURATE_SAVE/TIP": "La posicion de los objetos se guardan con precision",
   "CREATOR/HACK_COPY_HACK": "",
-  "CREATOR/HACK_COPY_HACK/TIP": "",
+  "CREATOR/HACK_COPY_HACK/TIP": "Te permite copiar cualquier nivel, sin ninguna contraseña",
   "CREATOR/HACK_CUSTOM_OBJECT_BYPASS": "",
-  "CREATOR/HACK_CUSTOM_OBJECT_BYPASS/TIP": "",
+  "CREATOR/HACK_CUSTOM_OBJECT_BYPASS/TIP": "Elimina el limite de objetos para los Custom Objects, permitiendote guardar más de 50",
   "CREATOR/HACK_DEFAULT_SONG_BYPASS": "",
-  "CREATOR/HACK_DEFAULT_SONG_BYPASS/TIP": "",
+  "CREATOR/HACK_DEFAULT_SONG_BYPASS/TIP": "Te permite usar las canciones principales ocultas en el editor",
   "CREATOR/HACK_EDITOR_EXTENSION": "",
   "CREATOR/HACK_EDITOR_EXTENSION/TIP": "",
   "CREATOR/HACK_FREE_SCROLL": "",
   "CREATOR/HACK_FREE_SCROLL/TIP": "",
   "CREATOR/HACK_HIDE_UI": "",
-  "CREATOR/HACK_HIDE_UI/TIP": "",
+  "CREATOR/HACK_HIDE_UI/TIP": "Oculta la interfaz del editor al crear",
   "CREATOR/HACK_LEVEL_EDIT": "",
-  "CREATOR/HACK_LEVEL_EDIT/TIP": "",
+  "CREATOR/HACK_LEVEL_EDIT/TIP": "Te permite editar cualquier nivel a travez del menu de pausa",
   "CREATOR/HACK_NO_C_MARK": "",
   "CREATOR/HACK_NO_C_MARK/TIP": "",
   "CREATOR/HACK_PLACE_OVER": "",
-  "CREATOR/HACK_PLACE_OVER/TIP": "",
+  "CREATOR/HACK_PLACE_OVER/TIP": "Permite colocar el mismo objeto sobre sí mismo en el editor",
   "CREATOR/HACK_SMOOTH_EDITOR_TRAIL": "",
   "CREATOR/HACK_SMOOTH_EDITOR_TRAIL/TIP": "",
   "CREATOR/HACK_TOOLBOX_BUTTON_BYPASS": "",
