Update and rename base.json to it-IT.json
Initial Progress in the Italian Translation for MegaHack, made by Muffin Cat (@realmuffincat on discord/twitter)

--- a/langs/it-IT.json
+++ b/langs/it-IT.json
@@ -1,18 +1,18 @@
 {
-  "NX/COLOUR/B": "",
-  "NX/COLOUR/B/PRE": "",
-  "NX/COLOUR/DROPDOWN/INPUT": "",
-  "NX/COLOUR/DROPDOWN/INPUT/PRE": "",
-  "NX/COLOUR/G": "",
-  "NX/COLOUR/G/PRE": "",
-  "NX/COLOUR/INPUT": "",
-  "NX/COLOUR/INPUT/PRE": "",
-  "NX/COLOUR/R": "",
-  "NX/COLOUR/R/PRE": "",
+  "NX/COLOUR/B": "Blu: ",
+  "NX/COLOUR/B/PRE": "B: ",
+  "NX/COLOUR/DROPDOWN/INPUT": "Colore HEX:",
+  "NX/COLOUR/DROPDOWN/INPUT/PRE": "Hex: ",
+  "NX/COLOUR/G": "Verde:",
+  "NX/COLOUR/G/PRE": "G: ",
+  "NX/COLOUR/INPUT": "Colore HEX:",
+  "NX/COLOUR/INPUT/PRE": "HEX:",
+  "NX/COLOUR/R": "Rosso:",
+  "NX/COLOUR/R/PRE": "R: ",
   "NX/COLOUR/RESET": "",
   "HOME": "Mega Hack",
-  "HOME/LANGUAGE": "",
-  "HOME/SEARCH": "",
+  "HOME/LANGUAGE": "Lingua: ",
+  "HOME/SEARCH": "Cerca: ",
   "BYPASS": "",
   "BYPASS/HACK_MAIN_LEVELS": "",
   "BYPASS/HACK_MAIN_LEVELS/TIP": "",
@@ -213,19 +213,19 @@
   "LEVEL/RESPAWN_TIME/DROPDOWN/SPINNER/SUF": "",
   "LEVEL/RESPAWN_TIME/HACK_RESPAWN_TIME": "",
   "LEVEL/RESPAWN_TIME/HACK_RESPAWN_TIME/TIP": "",
-  "LEVEL/SHOW_HITBOXES/DROPDOWN/FILL": "",
+  "LEVEL/SHOW_HITBOXES/DROPDOWN/FILL": "Riempi le Hitbox",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/HAZARDS/CHECKBOX": "",
-  "LEVEL/SHOW_HITBOXES/DROPDOWN/OPACITY": "",
-  "LEVEL/SHOW_HITBOXES/DROPDOWN/OPACITY/PRE": "",
-  "LEVEL/SHOW_HITBOXES/DROPDOWN/OPACITY/SUF": "",
-  "LEVEL/SHOW_HITBOXES/DROPDOWN/PASSABLE/CHECKBOX": "",
-  "LEVEL/SHOW_HITBOXES/DROPDOWN/PLAYER": "",
-  "LEVEL/SHOW_HITBOXES/DROPDOWN/SOLIDS/CHECKBOX": "",
-  "LEVEL/SHOW_HITBOXES/DROPDOWN/SPECIALS/CHECKBOX": "",
-  "LEVEL/SHOW_HITBOXES/DROPDOWN/STROKE_SIZE": "",
-  "LEVEL/SHOW_HITBOXES/DROPDOWN/STROKE_SIZE/PRE": "",
-  "LEVEL/SHOW_HITBOXES/HACK_SHOW_HITBOXES": "",
-  "LEVEL/SHOW_HITBOXES/HACK_SHOW_HITBOXES/TIP": "",
+  "LEVEL/SHOW_HITBOXES/DROPDOWN/OPACITY": "Trasparenza:",
+  "LEVEL/SHOW_HITBOXES/DROPDOWN/OPACITY/PRE": "Trasparenza: ",
+  "LEVEL/SHOW_HITBOXES/DROPDOWN/OPACITY/SUF": "%",
+  "LEVEL/SHOW_HITBOXES/DROPDOWN/PASSABLE/CHECKBOX": "Passabile",
+  "LEVEL/SHOW_HITBOXES/DROPDOWN/PLAYER": "Giocatore",
+  "LEVEL/SHOW_HITBOXES/DROPDOWN/SOLIDS/CHECKBOX": "Solidi",
+  "LEVEL/SHOW_HITBOXES/DROPDOWN/SPECIALS/CHECKBOX": "Varie",
+  "LEVEL/SHOW_HITBOXES/DROPDOWN/STROKE_SIZE": "Spessore Bordo:",
+  "LEVEL/SHOW_HITBOXES/DROPDOWN/STROKE_SIZE/PRE": "Spessore Bordo: ",
+  "LEVEL/SHOW_HITBOXES/HACK_SHOW_HITBOXES": "Mostra Hitbox",
+  "LEVEL/SHOW_HITBOXES/HACK_SHOW_HITBOXES/TIP": "Mostra le Hitbox in un livello",
   "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/MAX_DRAW": "",
   "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/MAX_DRAW/PRE": "",
   "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/MAX_DRAW/SUF": "",
@@ -233,43 +233,43 @@
   "LEVEL/SHOW_HITBOXES_TRAIL/HACK_SHOW_HITBOXES_TRAIL": "",
   "LEVEL/SHOW_HITBOXES_TRAIL/HACK_SHOW_HITBOXES_TRAIL/TIP": "",
   "LEVEL/SMART_STARTPOS/DROPDOWN/LEGACY_CALCULATION": "",
-  "LEVEL/SMART_STARTPOS/HACK_SMART_STARTPOS": "",
-  "LEVEL/SMART_STARTPOS/HACK_SMART_STARTPOS/TIP": "",
-  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/HIDE_INTERFACE": "",
-  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/L": "",
-  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/L/PRE": "",
-  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/R": "",
-  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/R/PRE": "",
-  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SWITCH_AFTER_DEATH": "",
-  "LEVEL/STARTPOS_SWITCHER/HACK_STARTPOS_SWITCHER": "",
-  "LEVEL/STARTPOS_SWITCHER/HACK_STARTPOS_SWITCHER/TIP": "",
-  "UNIVERSAL": "",
+  "LEVEL/SMART_STARTPOS/HACK_SMART_STARTPOS": "StartPos Intelligente",
+  "LEVEL/SMART_STARTPOS/HACK_SMART_STARTPOS/TIP": "Imposta la gamemode, la velocità, la grandezza (del giocatore) e lo spazio per uno StartPos in automatico",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/HIDE_INTERFACE": "Nascondi Interfaccia",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/L": "Keybind Sinistra: ",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/L/PRE": "Sinistra: ",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/R": "Keybind Destra: ",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/R/PRE": "Destra: ",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SWITCH_AFTER_DEATH": "Cambia dopo morte",
+  "LEVEL/STARTPOS_SWITCHER/HACK_STARTPOS_SWITCHER": "Cambio StartPos",
+  "LEVEL/STARTPOS_SWITCHER/HACK_STARTPOS_SWITCHER/TIP": "Rende possibile il cambio tra vari StartPos in un unico livello",
+  "UNIVERSAL": "Universale",
   "UNIVERSAL/HACK_ALLOW_LOW_VOLUME": "",
   "UNIVERSAL/HACK_ALLOW_LOW_VOLUME/TIP": "",
-  "UNIVERSAL/HACK_AUTO_SAFE_MODE": "",
-  "UNIVERSAL/HACK_AUTO_SAFE_MODE/TIP": "",
-  "UNIVERSAL/HACK_FAST_CHESTS": "",
-  "UNIVERSAL/HACK_FAST_CHESTS/TIP": "",
-  "UNIVERSAL/HACK_LOCK_CURSOR": "",
-  "UNIVERSAL/HACK_LOCK_CURSOR/TIP": "",
+  "UNIVERSAL/HACK_AUTO_SAFE_MODE": "Modalità Sicura Automatica",
+  "UNIVERSAL/HACK_AUTO_SAFE_MODE/TIP": "Attiva la Modalità Sicura in automatico quando i cheat sono abilitati, e la disattiva quando i cheat sono disabilitati",
+  "UNIVERSAL/HACK_FAST_CHESTS": "Casse Veloci",
+  "UNIVERSAL/HACK_FAST_CHESTS/TIP": "Velocizza le animazioni delle casse",
+  "UNIVERSAL/HACK_LOCK_CURSOR": "Blocca Cursore",
+  "UNIVERSAL/HACK_LOCK_CURSOR/TIP": "Blocca il cursore sulla finestra quando in un livello",
   "UNIVERSAL/HACK_MAIN_MENU_PLAY": "",
   "UNIVERSAL/HACK_MAIN_MENU_PLAY/TIP": "",
-  "UNIVERSAL/HACK_NO_TRANSITION": "",
-  "UNIVERSAL/HACK_NO_TRANSITION/TIP": "",
-  "UNIVERSAL/HACK_SAFE_MODE": "",
-  "UNIVERSAL/HACK_SAFE_MODE/TIP": "",
-  "UNIVERSAL/HACK_SAFE_MODE_POPUP": "",
-  "UNIVERSAL/HACK_SAFE_MODE_POPUP/TIP": "",
-  "UNIVERSAL/PITCH_SHIFTER/DROPDOWN/PITCH": "",
-  "UNIVERSAL/PITCH_SHIFTER/DROPDOWN/PITCH/PRE": "",
-  "UNIVERSAL/PITCH_SHIFTER/HACK_PITCH_SHIFTER": "",
-  "UNIVERSAL/PITCH_SHIFTER/HACK_PITCH_SHIFTER/TIP": "",
-  "UNIVERSAL/THREAD_PRIORITY/DROPDOWN/COMBO": "",
-  "UNIVERSAL/THREAD_PRIORITY/DROPDOWN/COMBO/0": "",
-  "UNIVERSAL/THREAD_PRIORITY/DROPDOWN/COMBO/1": "",
-  "UNIVERSAL/THREAD_PRIORITY/DROPDOWN/COMBO/2": "",
-  "UNIVERSAL/THREAD_PRIORITY/DROPDOWN/COMBO/3": "",
-  "UNIVERSAL/THREAD_PRIORITY/DROPDOWN/COMBO/4": "",
-  "UNIVERSAL/THREAD_PRIORITY/HACK_THREAD_PRIORITY": "",
-  "UNIVERSAL/THREAD_PRIORITY/HACK_THREAD_PRIORITY/TIP": ""
+  "UNIVERSAL/HACK_NO_TRANSITION": "No Transizioni",
+  "UNIVERSAL/HACK_NO_TRANSITION/TIP": "Toglie le transizioni tra i vari menu e sul caricamento di un livello",
+  "UNIVERSAL/HACK_SAFE_MODE": "Modalità Sicura",
+  "UNIVERSAL/HACK_SAFE_MODE/TIP": "Disabilita progressi e verificazioni sui livelli",
+  "UNIVERSAL/HACK_SAFE_MODE_POPUP": "Allerta Modalità Sicura",
+  "UNIVERSAL/HACK_SAFE_MODE_POPUP/TIP": "Avvisa prima dell'inizio di un livello se i cheat sono abilitati",
+  "UNIVERSAL/PITCH_SHIFTER/DROPDOWN/PITCH": "Ottavi:",
+  "UNIVERSAL/PITCH_SHIFTER/DROPDOWN/PITCH/PRE": "Ottavi: ",
+  "UNIVERSAL/PITCH_SHIFTER/HACK_PITCH_SHIFTER": "Cambio Tonalità",
+  "UNIVERSAL/PITCH_SHIFTER/HACK_PITCH_SHIFTER/TIP": "Cambia la tonalità della musica",
+  "UNIVERSAL/THREAD_PRIORITY/DROPDOWN/COMBO": "Priorità: ",
+  "UNIVERSAL/THREAD_PRIORITY/DROPDOWN/COMBO/0": "Bassa",
+  "UNIVERSAL/THREAD_PRIORITY/DROPDOWN/COMBO/1": "Inferiore al normale",
+  "UNIVERSAL/THREAD_PRIORITY/DROPDOWN/COMBO/2": "Normale",
+  "UNIVERSAL/THREAD_PRIORITY/DROPDOWN/COMBO/3": "Superiore al normale",
+  "UNIVERSAL/THREAD_PRIORITY/DROPDOWN/COMBO/4": "Alta",
+  "UNIVERSAL/THREAD_PRIORITY/HACK_THREAD_PRIORITY": "Priorità",
+  "UNIVERSAL/THREAD_PRIORITY/HACK_THREAD_PRIORITY/TIP": "Imposta quanta CPU viene imposta su GD, può migliorare le prestazioni"
 }
