--- a/langs/es-ES.json
+++ b/langs/es-ES.json
@@ -2,14 +2,14 @@
   "NX/COLOUR/B": "Azul:",
   "NX/COLOUR/B/PRE": "A:",
   "NX/COLOUR/DROPDOWN/INPUT": "Color Hex:",
-  "NX/COLOUR/DROPDOWN/INPUT/PRE": "Hex:",
+  "NX/COLOUR/DROPDOWN/INPUT/PRE": "Hex: ",
   "NX/COLOUR/G": "Verde:",
   "NX/COLOUR/G/PRE": "V:",
   "NX/COLOUR/INPUT": "Color Hex:",
-  "NX/COLOUR/INPUT/PRE": "",
-  "NX/COLOUR/R": "",
-  "NX/COLOUR/R/PRE": "",
-  "NX/COLOUR/RESET": "",
+  "NX/COLOUR/INPUT/PRE": "Hex: ",
+  "NX/COLOUR/R": "Rojo:",
+  "NX/COLOUR/R/PRE": "R: ",
+  "NX/COLOUR/RESET": "Reiniciar color",
   "HOME": "Mega Hack",
   "HOME/LANGUAGE": "Idioma:",
   "HOME/SEARCH": "Buscar",
@@ -62,15 +62,15 @@
   "COSMETIC/HACK_NO_TRAIL": "",
   "COSMETIC/HACK_NO_TRAIL/TIP": "",
   "COSMETIC/HACK_NO_WAVE_PULSE": "",
-  "COSMETIC/HACK_NO_WAVE_PULSE/TIP": "Desactiva el pulso del wave",
+  "COSMETIC/HACK_NO_WAVE_PULSE/TIP": "Desactiva el pulso del Wave",
   "COSMETIC/HACK_NO_WAVE_TRAIL": "",
-  "COSMETIC/HACK_NO_WAVE_TRAIL/TIP": "",
+  "COSMETIC/HACK_NO_WAVE_TRAIL/TIP": "Desactiva el Trail del Wave",
   "COSMETIC/HACK_NO_WAVE_TRAIL_BEHIND": "",
   "COSMETIC/HACK_NO_WAVE_TRAIL_BEHIND/TIP": "",
   "COSMETIC/HACK_SOLID_WAVE_TRAIL": "",
-  "COSMETIC/HACK_SOLID_WAVE_TRAIL/TIP": "",
+  "COSMETIC/HACK_SOLID_WAVE_TRAIL/TIP": "Desactiva el Blending en el Trail del Wave",
   "COSMETIC/HACK_STOP_TRIGGERS_ON_DEATH": "",
-  "COSMETIC/HACK_STOP_TRIGGERS_ON_DEATH/TIP": "",
+  "COSMETIC/HACK_STOP_TRIGGERS_ON_DEATH/TIP": "Detiene los Triggers de Move/Rotate al morir",
   "COSMETIC/HACK_TRAIL_CUTTING": "",
   "COSMETIC/HACK_TRAIL_CUTTING/TIP": "",
   "COSMETIC/HACK_WAVE_TRAIL_FIX": "",
@@ -80,7 +80,7 @@
   "COSMETIC/WAVE_PULSE_SIZE/DROPDOWN/SIZE": "",
   "COSMETIC/WAVE_PULSE_SIZE/DROPDOWN/SIZE/SUF": "",
   "COSMETIC/WAVE_PULSE_SIZE/HACK_WAVE_PULSE_SIZE": "",
-  "COSMETIC/WAVE_PULSE_SIZE/HACK_WAVE_PULSE_SIZE/TIP": "",
+  "COSMETIC/WAVE_PULSE_SIZE/HACK_WAVE_PULSE_SIZE/TIP": "Cambia el multiplicador del pulso del Wave",
   "CREATOR": "",
   "CREATOR/HACK_ACCURATE_SAVE": "",
   "CREATOR/HACK_ACCURATE_SAVE/TIP": "La posicion de los objetos se guardan con precision",
@@ -103,13 +103,13 @@
   "CREATOR/HACK_PLACE_OVER": "",
   "CREATOR/HACK_PLACE_OVER/TIP": "Permite colocar el mismo objeto sobre sí mismo en el editor",
   "CREATOR/HACK_SMOOTH_EDITOR_TRAIL": "",
-  "CREATOR/HACK_SMOOTH_EDITOR_TRAIL/TIP": "",
+  "CREATOR/HACK_SMOOTH_EDITOR_TRAIL/TIP": "Hace que la línea del jugador en el editor sea más suave al actualizarla cada fotograma en lugar de a 30 fps.",
   "CREATOR/HACK_TOOLBOX_BUTTON_BYPASS": "",
   "CREATOR/HACK_TOOLBOX_BUTTON_BYPASS/TIP": "",
   "CREATOR/HACK_TRIGGER_VALUE_BYPASS": "",
   "CREATOR/HACK_TRIGGER_VALUE_BYPASS/TIP": "",
   "CREATOR/HACK_VERIFY_HACK": "",
-  "CREATOR/HACK_VERIFY_HACK/TIP": "",
+  "CREATOR/HACK_VERIFY_HACK/TIP": "Te permite subir niveles no verificados",
   "LEVEL": "",
   "LEVEL/AUTO_DEAFEN/DROPDOWN/DEAFEN_AT": "",
   "LEVEL/AUTO_DEAFEN/DROPDOWN/DEAFEN_AT/PRE": "",
@@ -123,18 +123,18 @@
   "LEVEL/AUTO_DEAFEN/DROPDOWN/UNDEAFEN_AT/SUF": "",
   "LEVEL/AUTO_DEAFEN/DROPDOWN/UNDEAFEN_ON_PAUSE": "",
   "LEVEL/AUTO_DEAFEN/HACK_AUTO_DEAFEN": "",
-  "LEVEL/AUTO_DEAFEN/HACK_AUTO_DEAFEN/TIP": "",
+  "LEVEL/AUTO_DEAFEN/HACK_AUTO_DEAFEN/TIP": "Ensordece al usuario a partir de cierto %",
   "LEVEL/AUTO_MUSIC_SYNC/DROPDOWN/NO_LEGACY_SYNC": "",
   "LEVEL/AUTO_MUSIC_SYNC/DROPDOWN/THRESHOLD": "",
   "LEVEL/AUTO_MUSIC_SYNC/DROPDOWN/THRESHOLD/PRE": "",
   "LEVEL/AUTO_MUSIC_SYNC/DROPDOWN/THRESHOLD/SUF": "",
   "LEVEL/AUTO_MUSIC_SYNC/HACK_AUTO_MUSIC_SYNC": "",
-  "LEVEL/AUTO_MUSIC_SYNC/HACK_AUTO_MUSIC_SYNC/TIP": "",
+  "LEVEL/AUTO_MUSIC_SYNC/HACK_AUTO_MUSIC_SYNC/TIP": "Corrige la musica despues de desincronizarse, solo soporta niveles con una sola cancion y niveles lineares",
   "LEVEL/AUTO_PICKUP_COINS/DROPDOWN/1": "",
   "LEVEL/AUTO_PICKUP_COINS/DROPDOWN/2": "",
   "LEVEL/AUTO_PICKUP_COINS/DROPDOWN/3": "",
   "LEVEL/AUTO_PICKUP_COINS/HACK_AUTO_PICKUP_COINS": "",
-  "LEVEL/AUTO_PICKUP_COINS/HACK_AUTO_PICKUP_COINS/TIP": "",
+  "LEVEL/AUTO_PICKUP_COINS/HACK_AUTO_PICKUP_COINS/TIP": "Agarra automaticamente las monedas de usuario y doradas",
   "LEVEL/FRAME_STEPPER/DROPDOWN/BACK": "",
   "LEVEL/FRAME_STEPPER/DROPDOWN/BACK/PRE": "",
   "LEVEL/FRAME_STEPPER/DROPDOWN/PAUSE": "",
@@ -142,19 +142,19 @@
   "LEVEL/FRAME_STEPPER/DROPDOWN/STEP": "",
   "LEVEL/FRAME_STEPPER/DROPDOWN/STEP/PRE": "",
   "LEVEL/FRAME_STEPPER/HACK_FRAME_STEPPER": "",
-  "LEVEL/FRAME_STEPPER/HACK_FRAME_STEPPER/TIP": "",
+  "LEVEL/FRAME_STEPPER/HACK_FRAME_STEPPER/TIP": "Te permite retroceder o avanzar, frame por frame",
   "LEVEL/HACK_0_PRACTICE_COMPLETE": "",
-  "LEVEL/HACK_0_PRACTICE_COMPLETE/TIP": "",
+  "LEVEL/HACK_0_PRACTICE_COMPLETE/TIP": "Completa el nivel si te lo pasaste en practica en 1 intento",
   "LEVEL/HACK_ALL_MODES_PLATFORMER": "",
-  "LEVEL/HACK_ALL_MODES_PLATFORMER/TIP": "",
+  "LEVEL/HACK_ALL_MODES_PLATFORMER/TIP": "Habilita todos los modos en niveles de plataforma",
   "LEVEL/HACK_AUTO_SONG_DOWNLOAD": "",
-  "LEVEL/HACK_AUTO_SONG_DOWNLOAD/TIP": "",
+  "LEVEL/HACK_AUTO_SONG_DOWNLOAD/TIP": "Descarga las canciones del nivel automaticamente cuando abres la página del nivel",
   "LEVEL/HACK_CHECKPOINT_LIMIT_BYPASS": "",
   "LEVEL/HACK_CHECKPOINT_LIMIT_BYPASS/TIP": "",
   "LEVEL/HACK_COLLECT_COINS_IN_PRACTICE": "",
-  "LEVEL/HACK_COLLECT_COINS_IN_PRACTICE/TIP": "",
+  "LEVEL/HACK_COLLECT_COINS_IN_PRACTICE/TIP": "Te permite recoger monedas y monedas de usuario en el modo de práctica. Hecho por WEGFan",
   "LEVEL/HACK_CONFIRM_FULL_RESET": "",
-  "LEVEL/HACK_CONFIRM_FULL_RESET/TIP": "",
+  "LEVEL/HACK_CONFIRM_FULL_RESET/TIP": "requiere confirmación antes de entrar a reiniciar completamente el nivel",
   "LEVEL/HACK_CONFIRM_NORMAL": "",
   "LEVEL/HACK_CONFIRM_NORMAL/TIP": "",
   "LEVEL/HACK_CONFIRM_PRACTICE": "",
@@ -170,13 +170,13 @@
   "LEVEL/HACK_PRACTICE_MUSIC": "",
   "LEVEL/HACK_PRACTICE_MUSIC/TIP": "",
   "LEVEL/HACK_REPLAY_LAST_CHECKPOINT": "",
-  "LEVEL/HACK_REPLAY_LAST_CHECKPOINT/TIP": "",
+  "LEVEL/HACK_REPLAY_LAST_CHECKPOINT/TIP": "Reapareces desde tu ultimo checkpoint al completar el nivel",
   "LEVEL/HACK_SHOW_HITBOXES_ON_DEATH": "",
-  "LEVEL/HACK_SHOW_HITBOXES_ON_DEATH/TIP": "",
+  "LEVEL/HACK_SHOW_HITBOXES_ON_DEATH/TIP": "Visualiza las hitboxes del nivel, solo al morir",
   "LEVEL/HACK_SHOW_LAYOUT": "",
-  "LEVEL/HACK_SHOW_LAYOUT/TIP": "",
+  "LEVEL/HACK_SHOW_LAYOUT/TIP": "Remueve toda la decoracion y colores de un nivel",
   "LEVEL/HACK_SHOW_TRIGGERS": "",
-  "LEVEL/HACK_SHOW_TRIGGERS/TIP": "",
+  "LEVEL/HACK_SHOW_TRIGGERS/TIP": "Te permite ver los triggers en el nivel",
   "LEVEL/HACK_STARTPOS_RESET_CAMERA": "",
   "LEVEL/HACK_STARTPOS_RESET_CAMERA/TIP": "",
   "LEVEL/JUMPSCARE/DROPDOWN/ONLY_FROM_0": "",
