--- a/langs/ru-RU.json
+++ b/langs/ru-RU.json
@@ -1,6 +1,6 @@
 {
   "NX/COLOUR/B": "Синий: ",
-  "NX/COLOUR/B/PRE": "С: ",
+  "NX/COLOUR/B/PRE": "B: ",
   "NX/COLOUR/DROPDOWN/INPUT": "Цвет Hex:",
   "NX/COLOUR/DROPDOWN/INPUT/PRE": "Hex: ",
   "NX/COLOUR/G": "Зелёный:",
