--- a/langs/ru-RU.json
+++ b/langs/ru-RU.json
@@ -40,13 +40,13 @@
   "COSMETIC/HACK_HIDE_PLAYER": "Скрыть Игрока",
   "COSMETIC/HACK_HIDE_PLAYER/TIP": "Скрывает игрока",
   "COSMETIC/HACK_NO_CAMERA": "Без Камер",
-  "COSMETIC/HACK_NO_CAMERA/TIP": "Отключает триггеры камеры",
+  "COSMETIC/HACK_NO_CAMERA/TIP": "Отключает триггеры движения камеры",
   "COSMETIC/HACK_NO_CAMERA_ZOOM": "Без Приближения Камер",
   "COSMETIC/HACK_NO_CAMERA_ZOOM/TIP": "Выключает триггеры приближения камеры",
   "COSMETIC/HACK_NO_DEATH_EFFECT": "Без Эффекта Смерти",
   "COSMETIC/HACK_NO_DEATH_EFFECT/TIP": "Отключает визуальные эффекты при смерти",
   "COSMETIC/HACK_NO_DO_NOT_FLIP": "Без "Do Not" Переворота",
-  "COSMETIC/HACK_NO_DO_NOT_FLIP/TIP": "Не даёт перевернуть текст "attempt" и "level complete"",
+  "COSMETIC/HACK_NO_DO_NOT_FLIP/TIP": "Не даёт перевернуть текст попытки и прохождения уровня",
   "COSMETIC/HACK_NO_PARTICLES": "Без Частиц",
   "COSMETIC/HACK_NO_PARTICLES/TIP": "Выключает систему частиц (по большей части)",
   "COSMETIC/HACK_NO_PORTAL_LIGHTNING": "Без Молнии Порталов",
@@ -60,7 +60,7 @@
   "COSMETIC/HACK_NO_SHAKE": "Без Тряски",
   "COSMETIC/HACK_NO_SHAKE/TIP": "Выключает триггеры тряски",
   "COSMETIC/HACK_NO_TRAIL": "Без Трейла",
-  "COSMETIC/HACK_NO_TRAIL/TIP": "Устанавливает трейл в состояние "always off"",
+  "COSMETIC/HACK_NO_TRAIL/TIP": "Устанавливает трейл в состояние always off",
   "COSMETIC/HACK_NO_WAVE_PULSE": "Без Пульсации Волны",
   "COSMETIC/HACK_NO_WAVE_PULSE/TIP": "Выключает пульсацию волны",
   "COSMETIC/HACK_NO_WAVE_TRAIL": "Без Трейла Волны",
