--- a/langs/fr-FR.json
+++ b/langs/fr-FR.json
@@ -17,7 +17,7 @@
   "BYPASS/HACK_MAIN_LEVELS": "Niveaux Principaux",
   "BYPASS/HACK_MAIN_LEVELS/TIP": "Déverrouille les niveaux principaux démon",
   "BYPASS/HACK_MUSIC_UNLOCKER": "Déverrouillage de musique",
-  "BYPASS/HACK_MUSIC_UNLOCKER/TIP": "Permet d'utiliser une musique personnalisée pour le mode entraînement et le menu",
+  "BYPASS/HACK_MUSIC_UNLOCKER/TIP": "Permet d'utiliser une musique personnalisée en mode practice et dans le menu",
   "BYPASS/HACK_SLIDER_LIMIT": "Limite du slider",
   "BYPASS/HACK_SLIDER_LIMIT/TIP": "Permet de déplacer les sliders au-delà de la limite visible",
   "BYPASS/HACK_TEXT_LENGTH": "Longueur du texte",
@@ -61,34 +61,34 @@
   "COSMETIC/HACK_NO_SHAKE/TIP": "Désactive les triggers de secousse",
   "COSMETIC/HACK_NO_TRAIL": "Aucune traînée",
   "COSMETIC/HACK_NO_TRAIL/TIP": "Désactive en permanence la traînée du joueur",
-  "COSMETIC/HACK_NO_WAVE_PULSE": "Aucune Wave Pulse",
-  "COSMETIC/HACK_NO_WAVE_PULSE/TIP": "Désactive la pulsation de l'onde",
-  "COSMETIC/HACK_NO_WAVE_TRAIL": "Aucune Wave Trail",
-  "COSMETIC/HACK_NO_WAVE_TRAIL/TIP": "Désactive la traînée d'onde dure, la traînée standard reste",
-  "COSMETIC/HACK_NO_WAVE_TRAIL_BEHIND": "Aucune traînée d'onde derrière",
-  "COSMETIC/HACK_NO_WAVE_TRAIL_BEHIND/TIP": "Désactive la traînée par défaut derrière la traînée d'onde",
-  "COSMETIC/HACK_SOLID_WAVE_TRAIL": "Wave Trail Solide",
-  "COSMETIC/HACK_SOLID_WAVE_TRAIL/TIP": "Pas de mélange de couleur sur la traînée d'onde, comme la traînée noir et blanc",
+  "COSMETIC/HACK_NO_WAVE_PULSE": "Aucune Pulsation de Wave",
+  "COSMETIC/HACK_NO_WAVE_PULSE/TIP": "Désactive la pulsation de wave",
+  "COSMETIC/HACK_NO_WAVE_TRAIL": "Aucune traînée de Wave",
+  "COSMETIC/HACK_NO_WAVE_TRAIL/TIP": "Désactive la traînée dure de wave, la traînée standard reste",
+  "COSMETIC/HACK_NO_WAVE_TRAIL_BEHIND": "Aucune traînée de wave derrière",
+  "COSMETIC/HACK_NO_WAVE_TRAIL_BEHIND/TIP": "Désactive la traînée par défaut derrière la traînée de wave",
+  "COSMETIC/HACK_SOLID_WAVE_TRAIL": "Traînée de Wave Solide",
+  "COSMETIC/HACK_SOLID_WAVE_TRAIL/TIP": "Pas de mélange de couleurs sur la traînée de wave, comme la traînée noire et blanche",
   "COSMETIC/HACK_STOP_TRIGGERS_ON_DEATH": "Arrêter les triggers à la mort",
   "COSMETIC/HACK_STOP_TRIGGERS_ON_DEATH/TIP": "Arrête les triggers de mouvement/rotation à la mort pour observer ce qui a causé la mort",
-  "COSMETIC/HACK_TRAIL_CUTTING": "Trail Cutting",
+  "COSMETIC/HACK_TRAIL_CUTTING": "Coupage de traînée",
   "COSMETIC/HACK_TRAIL_CUTTING/TIP": "Réintroduit le bug de coupure de traînée",
-  "COSMETIC/HACK_WAVE_TRAIL_FIX": "Wave Trail Fix",
-  "COSMETIC/HACK_WAVE_TRAIL_FIX/TIP": "Corrige le problème de saccade de la traînée d'onde",
-  "COSMETIC/HACK_WAVE_TRAIL_ON_DEATH": "Wave Trail à la mort",
-  "COSMETIC/HACK_WAVE_TRAIL_ON_DEATH/TIP": "Garde la traînée d'onde visible à la mort",
-  "COSMETIC/WAVE_PULSE_SIZE/DROPDOWN/SIZE": "Multiplicateur de Wave Pulse :",
+  "COSMETIC/HACK_WAVE_TRAIL_FIX": "Correction de la traînée de wave",
+  "COSMETIC/HACK_WAVE_TRAIL_FIX/TIP": "Corrige le problème de saccade de la traînée de wave",
+  "COSMETIC/HACK_WAVE_TRAIL_ON_DEATH": "Traînée de Wave à la mort",
+  "COSMETIC/HACK_WAVE_TRAIL_ON_DEATH/TIP": "Garde la traînée de wave visible à la mort",
+  "COSMETIC/WAVE_PULSE_SIZE/DROPDOWN/SIZE": "Multiplicateur de pulsation de Wave :",
   "COSMETIC/WAVE_PULSE_SIZE/DROPDOWN/SIZE/SUF": "x",
-  "COSMETIC/WAVE_PULSE_SIZE/HACK_WAVE_PULSE_SIZE": "Taille de la Wave Pulse",
-  "COSMETIC/WAVE_PULSE_SIZE/HACK_WAVE_PULSE_SIZE/TIP": "Modifie le multiplicateur de taille de la pulsation d'onde",
+  "COSMETIC/WAVE_PULSE_SIZE/HACK_WAVE_PULSE_SIZE": "Taille de la pulsation de Wave",
+  "COSMETIC/WAVE_PULSE_SIZE/HACK_WAVE_PULSE_SIZE/TIP": "Modifie le multiplicateur de taille de la pulsation de wave",
   "CREATOR": "Créateur",
   "CREATOR/HACK_ACCURATE_SAVE": "Sauvegarde précise",
   "CREATOR/HACK_ACCURATE_SAVE/TIP": "Les positions des objets sont sauvegardées plus précisément",
   "CREATOR/HACK_COPY_HACK": "Triche de copie",
   "CREATOR/HACK_COPY_HACK/TIP": "Permet de copier n'importe quel niveau sans mot de passe",
-  "CREATOR/HACK_CUSTOM_OBJECT_BYPASS": "Contournement des objets personnalisés",
+  "CREATOR/HACK_CUSTOM_OBJECT_BYPASS": "Bypass des objets personnalisés",
   "CREATOR/HACK_CUSTOM_OBJECT_BYPASS/TIP": "Enlève la limite d'objets pour les objets personnalisés et permet d'enregistrer au-delà de 50",
-  "CREATOR/HACK_DEFAULT_SONG_BYPASS": "Contournement des chansons par défaut",
+  "CREATOR/HACK_DEFAULT_SONG_BYPASS": "Bypass des chansons par défaut",
   "CREATOR/HACK_DEFAULT_SONG_BYPASS/TIP": "Permet d'utiliser des chansons par défaut cachées dans l'éditeur",
   "CREATOR/HACK_EDITOR_EXTENSION": "Extension de l'éditeur",
   "CREATOR/HACK_EDITOR_EXTENSION/TIP": "Augmente la longueur de l'éditeur par un facteur de 128",
@@ -102,13 +102,13 @@
   "CREATOR/HACK_NO_C_MARK/TIP": "Supprime la marque (C) lors de l'upload de niveaux copiés",
   "CREATOR/HACK_PLACE_OVER": "Superposer",
   "CREATOR/HACK_PLACE_OVER/TIP": "Permet de placer le même objet sur lui-même dans l'éditeur",
-  "CREATOR/HACK_SMOOTH_EDITOR_TRAIL": "Smooth Editor Trail",
+  "CREATOR/HACK_SMOOTH_EDITOR_TRAIL": "Traînée d'éditeur lisse",
   "CREATOR/HACK_SMOOTH_EDITOR_TRAIL/TIP": "Rend la ligne de test dans l'éditeur plus fluide en la mettant à jour chaque image au lieu de 30 images par seconde",
   "CREATOR/HACK_TOOLBOX_BUTTON_BYPASS": "Toolbox Button Bypass",
   "CREATOR/HACK_TOOLBOX_BUTTON_BYPASS/TIP": "Permet d'avoir plus d'objets dans la boîte à outils de l'éditeur",
-  "CREATOR/HACK_TRIGGER_VALUE_BYPASS": "Trigger Value Bypass",
+  "CREATOR/HACK_TRIGGER_VALUE_BYPASS": "Bypass de valeur des triggers",
   "CREATOR/HACK_TRIGGER_VALUE_BYPASS/TIP": "Supprime les limites de contrôle des triggers",
-  "CREATOR/HACK_VERIFY_HACK": "Verify Hack",
+  "CREATOR/HACK_VERIFY_HACK": "Triche de vérification",
   "CREATOR/HACK_VERIFY_HACK/TIP": "Permet d'upload des niveaux non vérifiés",
   "LEVEL": "Niveau",
   "LEVEL/AUTO_DEAFEN/DROPDOWN/DEAFEN_AT": "Assourdir à :",
@@ -163,14 +163,14 @@
   "LEVEL/HACK_CONFIRM_RESET/TIP": "Demande une confirmation avant de réinitialiser le niveau",
   "LEVEL/HACK_FORCE_PLATFORMER": "Forcer le mode plateforme",
   "LEVEL/HACK_FORCE_PLATFORMER/TIP": "Active le mode plateforme sur tous les niveaux",
-  "LEVEL/HACK_INSTANT_COMPLETE": "Instant Complete",
+  "LEVEL/HACK_INSTANT_COMPLETE": "Complétion instantanée",
   "LEVEL/HACK_INSTANT_COMPLETE/TIP": "Téléporte le joueur à la fin d'un niveau",
   "LEVEL/HACK_PRACTICE_BUG_FIX": "Correction des bugs en mode practice",
   "LEVEL/HACK_PRACTICE_BUG_FIX/TIP": "Sauvegarde et restaure la vélocité du joueur en mode practice à la mort",
   "LEVEL/HACK_PRACTICE_MUSIC": "Musique en mode practice",
   "LEVEL/HACK_PRACTICE_MUSIC/TIP": "Débloque les paramètres de synchronisation musicale en mode practice",
   "LEVEL/HACK_REPLAY_LAST_CHECKPOINT": "Rejouer depuis le dernier checkpoint",
-  "LEVEL/HACK_REPLAY_LAST_CHECKPOINT/TIP": "Permet de réapparaître depuis le dernier checkpoint en mode entraînement après avoir complété un niveau",
+  "LEVEL/HACK_REPLAY_LAST_CHECKPOINT/TIP": "Permet de réapparaître depuis le dernier checkpoint en mode practice après avoir complété un niveau",
   "LEVEL/HACK_SHOW_HITBOXES_ON_DEATH": "Afficher les Hitboxes à la mort",
   "LEVEL/HACK_SHOW_HITBOXES_ON_DEATH/TIP": "Visualise les Hitboxes du niveau uniquement à la mort",
   "LEVEL/HACK_SHOW_LAYOUT": "Afficher le layout",
