--- a/langs/ru-RU.json
+++ b/langs/ru-RU.json
@@ -45,7 +45,7 @@
   "COSMETIC/HACK_NO_CAMERA_ZOOM/TIP": "Выключает триггеры приближения камеры",
   "COSMETIC/HACK_NO_DEATH_EFFECT": "Без Эффекта Смерти",
   "COSMETIC/HACK_NO_DEATH_EFFECT/TIP": "Отключает визуальные эффекты при смерти",
-  "COSMETIC/HACK_NO_DO_NOT_FLIP": "Без "Do Not" Переворота",
+  "COSMETIC/HACK_NO_DO_NOT_FLIP": "Без \"Do Not\" Переворота",
   "COSMETIC/HACK_NO_DO_NOT_FLIP/TIP": "Не даёт перевернуть текст попытки и прохождения уровня",
   "COSMETIC/HACK_NO_PARTICLES": "Без Частиц",
   "COSMETIC/HACK_NO_PARTICLES/TIP": "Выключает систему частиц (по большей части)",
@@ -93,7 +93,7 @@
   "CREATOR/HACK_EDITOR_EXTENSION": "Расширение Редактора",
   "CREATOR/HACK_EDITOR_EXTENSION/TIP": "Увеличивает длину редактора в 128 раз",
   "CREATOR/HACK_FREE_SCROLL": "Свободное Пролистывание",
-  "CREATOR/HACK_FREE_SCROLL/TIP": "Позволяет вам "пролистнуть" редактор",
+  "CREATOR/HACK_FREE_SCROLL/TIP": "Позволяет вам \"пролистнуть\" редактор",
   "CREATOR/HACK_HIDE_UI": "Скрыть Интерфейс",
   "CREATOR/HACK_HIDE_UI/TIP": "Скрывает интерфейс редактора при постройке",
   "CREATOR/HACK_LEVEL_EDIT": "Редактирование Уровня",
@@ -142,7 +142,7 @@
   "LEVEL/FRAME_STEPPER/DROPDOWN/STEP": "Кнопка Шага:",
   "LEVEL/FRAME_STEPPER/DROPDOWN/STEP/PRE": "Шаг: ",
   "LEVEL/FRAME_STEPPER/HACK_FRAME_STEPPER": "Пошаговые Кадры",
-  "LEVEL/FRAME_STEPPER/HACK_FRAME_STEPPER/TIP": "Позволяет покадрово "шагать" вперёд и назад",
+  "LEVEL/FRAME_STEPPER/HACK_FRAME_STEPPER/TIP": "Позволяет покадрово \"шагать\" вперёд и назад",
   "LEVEL/HACK_0_PRACTICE_COMPLETE": "Прохождение Уровня С 0% В Практике",
   "LEVEL/HACK_0_PRACTICE_COMPLETE/TIP": "Позволяет пройти уровень в обычном режиме если уровень был пройден с 0% в режиме практики",
   "LEVEL/HACK_ALL_MODES_PLATFORMER": "Все Виды Игры в Платформер",
