--- a/langs/ru-RU.json
+++ b/langs/ru-RU.json
@@ -54,13 +54,13 @@
   "COSMETIC/HACK_NO_PULSE": "Без Пульсаций",
   "COSMETIC/HACK_NO_PULSE/TIP": "Выключает пульсацию на объектах",
   "COSMETIC/HACK_NO_RESPAWN_FLASH": "Без Мерцания Возрождения",
-  "COSMETIC/HACK_NO_RESPAWN_FLASH/TIP": "Выключает мерцание возрождения и круга",
+  "COSMETIC/HACK_NO_RESPAWN_FLASH/TIP": "Выключает мерцание возрождения и эффект круга",
   "COSMETIC/HACK_NO_SHADERS": "Без Шейдеров",
   "COSMETIC/HACK_NO_SHADERS/TIP": "Выключает шейдеры в уровне",
   "COSMETIC/HACK_NO_SHAKE": "Без Тряски",
   "COSMETIC/HACK_NO_SHAKE/TIP": "Выключает триггеры тряски",
   "COSMETIC/HACK_NO_TRAIL": "Без Трейла",
-  "COSMETIC/HACK_NO_TRAIL/TIP": "Устанавливает трейл в состояние always off",
+  "COSMETIC/HACK_NO_TRAIL/TIP": "Устанавливает трейл в состояние \"всегда выключено\"",
   "COSMETIC/HACK_NO_WAVE_PULSE": "Без Пульсации Волны",
   "COSMETIC/HACK_NO_WAVE_PULSE/TIP": "Выключает пульсацию волны",
   "COSMETIC/HACK_NO_WAVE_TRAIL": "Без Трейла Волны",
@@ -111,14 +111,14 @@
   "CREATOR/HACK_VERIFY_HACK": "Чит Верификации",
   "CREATOR/HACK_VERIFY_HACK/TIP": "Позволяет выложить неверифицированные уровни",
   "LEVEL": "Уровень",
-  "LEVEL/AUTO_DEAFEN/DROPDOWN/DEAFEN_AT": "Заглушить на: ",
+  "LEVEL/AUTO_DEAFEN/DROPDOWN/DEAFEN_AT": "Заглушить на:",
   "LEVEL/AUTO_DEAFEN/DROPDOWN/DEAFEN_AT/PRE": "Заглушить на: ",
   "LEVEL/AUTO_DEAFEN/DROPDOWN/DEAFEN_AT/SUF": "%",
   "LEVEL/AUTO_DEAFEN/DROPDOWN/DEAFEN_IN_PRACTICE": "Заглушаться в режиме практики",
   "LEVEL/AUTO_DEAFEN/DROPDOWN/DEAFEN_WITH_STARTPOS": "Заглушаться с StartPos",
   "LEVEL/AUTO_DEAFEN/DROPDOWN/SHORTCUT": "Горячие клавиши заглушения",
   "LEVEL/AUTO_DEAFEN/DROPDOWN/SHORTCUT/PRE": "Горячие клавиши",
-  "LEVEL/AUTO_DEAFEN/DROPDOWN/UNDEAFEN_AT": "Отключить глушение на: ",
+  "LEVEL/AUTO_DEAFEN/DROPDOWN/UNDEAFEN_AT": "Отключить глушение на:",
   "LEVEL/AUTO_DEAFEN/DROPDOWN/UNDEAFEN_AT/PRE": "Отключить глушение на: ",
   "LEVEL/AUTO_DEAFEN/DROPDOWN/UNDEAFEN_AT/SUF": "%",
   "LEVEL/AUTO_DEAFEN/DROPDOWN/UNDEAFEN_ON_PAUSE": "Отключить глушение на паузе",
