My last improvement i swear

--- a/langs/ru-RU.json
+++ b/langs/ru-RU.json
@@ -152,7 +152,7 @@
   "LEVEL/HACK_CHECKPOINT_LIMIT_BYPASS": "Обход Лимита Чекпоинтов",
   "LEVEL/HACK_CHECKPOINT_LIMIT_BYPASS/TIP": "Обход лимита на 50 чекпоинтов",
   "LEVEL/HACK_COLLECT_COINS_IN_PRACTICE": "Собирание Монет В Практике",
-  "LEVEL/HACK_COLLECT_COINS_IN_PRACTICE/TIP": "Позволяет монетам и пользовательским монетам собираться в режиме практики. Сделан WEGFan",
+  "LEVEL/HACK_COLLECT_COINS_IN_PRACTICE/TIP": "Позволяет монетам и пользовательским монетам собираться в режиме практики. Сделано WEGFan",
   "LEVEL/HACK_CONFIRM_FULL_RESET": "Подтверждение Полного Сброса",
   "LEVEL/HACK_CONFIRM_FULL_RESET/TIP": "Требует подтверждение перед тем как полностью сбросить уровень",
   "LEVEL/HACK_CONFIRM_NORMAL": "Подтверждение Нормального Режима",
@@ -220,7 +220,7 @@
   "LEVEL/SHOW_HITBOXES/DROPDOWN/OPACITY/SUF": "%",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/PASSABLE/CHECKBOX": "Проходимые",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/PLAYER": "Игрок",
-  "LEVEL/SHOW_HITBOXES/DROPDOWN/SOLIDS/CHECKBOX": "Твёрдые",
+  "LEVEL/SHOW_HITBOXES/DROPDOWN/SOLIDS/CHECKBOX": "Цельные",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/SPECIALS/CHECKBOX": "Специальные",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/STROKE_SIZE": "Размер Обводки:",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/STROKE_SIZE/PRE": "Размер Обводки: ",
@@ -231,10 +231,10 @@
   "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/MAX_DRAW/SUF": " кадров",
   "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/UNCAPPED_EDITOR_LENGTH": "Неограниченная Длина в Редакторе",
   "LEVEL/SHOW_HITBOXES_TRAIL/HACK_SHOW_HITBOXES_TRAIL": "Показать Трейл Хитбоксов",
-  "LEVEL/SHOW_HITBOXES_TRAIL/HACK_SHOW_HITBOXES_TRAIL/TIP": "Показывает трейл где был хитбокс игрока во время попытки. Требуется "Показать Хитбоксы"",
-  "LEVEL/SMART_STARTPOS/DROPDOWN/LEGACY_CALCULATION": "Устаревшая Калькуляция",
+  "LEVEL/SHOW_HITBOXES_TRAIL/HACK_SHOW_HITBOXES_TRAIL/TIP": "Показывает трейл где был хитбокс игрока во время попытки. Для этого требуется включить Хитбоксы",
+  "LEVEL/SMART_STARTPOS/DROPDOWN/LEGACY_CALCULATION": "Устаревший Расчёт",
   "LEVEL/SMART_STARTPOS/HACK_SMART_STARTPOS": "Умный StartPos",
-  "LEVEL/SMART_STARTPOS/HACK_SMART_STARTPOS/TIP": "Автоматически устанавливает игровой режим, скорость, размер и границы для StartPos",
+  "LEVEL/SMART_STARTPOS/HACK_SMART_STARTPOS/TIP": "Автоматически устанавливает игровой режим, скорость, размер и границы для StartPos'ов",
   "LEVEL/STARTPOS_SWITCHER/DROPDOWN/HIDE_INTERFACE": "Скрыть Интерфейс",
   "LEVEL/STARTPOS_SWITCHER/DROPDOWN/L": "Горячая Клавиша Налево:",
   "LEVEL/STARTPOS_SWITCHER/DROPDOWN/L/PRE": "Налево: ",
@@ -245,9 +245,9 @@
   "LEVEL/STARTPOS_SWITCHER/HACK_STARTPOS_SWITCHER/TIP": "Позволяет переключаться между несколькими StartPos'ами в уровне",
   "UNIVERSAL": "Универсальное",
   "UNIVERSAL/HACK_ALLOW_LOW_VOLUME": "Разрешить Низкую Громкость",
-  "UNIVERSAL/HACK_ALLOW_LOW_VOLUME/TIP": "Выключает защёлкивание слайдера на 0% при установлении слайдера громкости на 3% или ниже",
+  "UNIVERSAL/HACK_ALLOW_LOW_VOLUME/TIP": "Убирает защёлкивание слайдера на 0% при установлении слайдера громкости на 3% или ниже",
   "UNIVERSAL/HACK_AUTO_SAFE_MODE": "Авто Безопасный Режим",
-  "UNIVERSAL/HACK_AUTO_SAFE_MODE/TIP": "Включает Безопасный Режим только когда включены читы",
+  "UNIVERSAL/HACK_AUTO_SAFE_MODE/TIP": "Автоматически включает Безопасный Режим когда включены читы",
   "UNIVERSAL/HACK_FAST_CHESTS": "Быстрая Анимация Сундуков",
   "UNIVERSAL/HACK_FAST_CHESTS/TIP": "Ускоряет анимацию открытия сундуков",
   "UNIVERSAL/HACK_LOCK_CURSOR": "Заблокировать Курсор",
